RESOLVED FIXED 131485
[CSS Regions] Hit testing doesn't work in video
https://bugs.webkit.org/show_bug.cgi?id=131485
Summary [CSS Regions] Hit testing doesn't work in video
Andrei Bucur
Reported 2014-04-10 01:43:41 PDT
Created attachment 229031 [details] Repro See the attached repro. It's not possible to hit the controls.
Attachments
Repro (284.55 KB, text/html)
2014-04-10 01:43 PDT, Andrei Bucur
no flags
Minimized repro (1.14 KB, text/html)
2014-04-10 05:33 PDT, Andrei Bucur
no flags
Another repro (720 bytes, text/html)
2014-04-10 07:39 PDT, Mihnea Ovidenie
no flags
Patch (7.55 KB, patch)
2014-04-12 22:51 PDT, Mihnea Ovidenie
no flags
Patch for landing (7.91 KB, patch)
2014-04-13 23:58 PDT, Mihnea Ovidenie
no flags
Andrei Bucur
Comment 1 2014-04-10 05:33:40 PDT
Created attachment 229044 [details] Minimized repro A better repro
Mihnea Ovidenie
Comment 2 2014-04-10 07:39:46 PDT
Created attachment 229050 [details] Another repro
Mihnea Ovidenie
Comment 3 2014-04-12 02:12:40 PDT
Looks like we miss depth sorting information when we cross the boundary from region layer to flow thread layer.
Mihnea Ovidenie
Comment 4 2014-04-12 22:51:32 PDT
Andrei Bucur
Comment 5 2014-04-13 22:44:33 PDT
Comment on attachment 229218 [details] Patch r=me
Mihnea Ovidenie
Comment 6 2014-04-13 23:58:28 PDT
Created attachment 229266 [details] Patch for landing
WebKit Commit Bot
Comment 7 2014-04-14 00:51:21 PDT
Comment on attachment 229266 [details] Patch for landing Clearing flags on attachment: 229266 Committed r167215: <http://trac.webkit.org/changeset/167215>
WebKit Commit Bot
Comment 8 2014-04-14 00:51:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.