[CSS Regions] Hit testing doesn't work in video https://bugs.webkit.org/show_bug.cgi?id=131485

Reviewed by Andrei Bucur.

Source/WebCore:

When hit testing flow thread layer through the region layer,
we have to pass the depth sorting information and take that
into account for the situation in which an ancestor of the region
has preserve-3d transform style.

Test: fast/regions/hit-test-region-preserve3d-container.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::hitTestLayer):
(WebCore::RenderLayer::hitTestFlowThreadIfRegionForFragments):
* rendering/RenderLayer.h:

LayoutTests:

* fast/regions/hit-test-region-preserve3d-container-expected.txt: Added.
* fast/regions/hit-test-region-preserve3d-container.html: Added.


Canonical link: https://commits.webkit.org/149681@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167215 268f45cc-cd09-0410-ab3c-d52691b4dbfc